# project-pickle

./: AGENTS.md  CMakeLists.txt  README.md  main.cpp
docs/: architecture.md  codex_handoff.md  roadmap.md  test-coverage-gap-matrix.md
docs/prompts/: M00_bootstrap_prompt.txt  M01_ui_shell_prompt.txt  M02_db_init_prompt.txt
docs/tasks/: M00_bootstrap.md  M01_ui_shell.md  M02_db_init.md
qml/: Main.qml
qml/components/: InfoPanel.qml  LibraryPanel.qml  PlaybackBar.qml  ReviewShortcutLayer.qml
qml/pages/: PlayerPage.qml
src/: main.cpp
src/app/: AppController.cpp  AppController.h  AppControllerBatchRename.cpp  AppControllerSelection.cpp  DiagnosticsController.cpp  DiagnosticsController.h  LibraryController.cpp  LibraryController.h  LibraryReloadService.cpp  LibraryReloadService.h  MediaActionsController.cpp  MediaActionsController.h  MediaItemPresenter.cpp  MediaItemPresenter.h  MetadataController.cpp  MetadataController.h  ScanController.cpp  ScanController.h  SettingsController.cpp  SettingsController.h  SnapshotController.cpp  SnapshotController.h  ThumbnailController.cpp  ThumbnailController.h  WorkEventLog.cpp  WorkEventLog.h
src/application/: BatchRenameMediaUseCase.cpp  BatchRenameMediaUseCase.h  BatchUpdateMediaUseCase.cpp  BatchUpdateMediaUseCase.h  CaptureSnapshotUseCase.cpp  CaptureSnapshotUseCase.h  ExtractMetadataUseCase.cpp  ExtractMetadataUseCase.h  LibraryLoadResult.h  LoadLibraryUseCase.cpp  LoadLibraryUseCase.h  RebuildThumbnailsUseCase.cpp  RebuildThumbnailsUseCase.h  RenameMediaUseCase.cpp  RenameMediaUseCase.h  SavePlaybackPositionUseCase.cpp  SavePlaybackPositionUseCase.h  ScanCommitResult.h  ScanLibraryUseCase.cpp  ScanLibraryUseCase.h  SettingsUseCase.cpp  SettingsUseCase.h  UpdateMediaDetailsUseCase.cpp  UpdateMediaDetailsUseCase.h  UpdateMediaFlagsUseCase.cpp  UpdateMediaFlagsUseCase.h
src/core/: AppLogger.cpp  AppLogger.h  CancellationToken.cpp  CancellationToken.h  ExternalToolService.cpp  ExternalToolService.h  PathSecurity.cpp  PathSecurity.h  ProcessRunner.cpp  ProcessRunner.h
src/db/: AppSettingsRepository.cpp  AppSettingsRepository.h  DatabaseService.cpp  DatabaseService.h  MediaRepository.cpp  MediaRepository.h  MigrationService.cpp  MigrationService.h  ScopedDatabaseConnection.cpp  ScopedDatabaseConnection.h
src/domain/: AppSettingsPolicy.cpp  AppSettingsPolicy.h  CancellationToken.cpp  LibraryQuery.h  MediaEntities.h  OperationResult.h
src/infrastructure/: PathSecurityPolicy.cpp  PathSecurityPolicy.h
src/media/: MediaLibraryModel.cpp  MediaLibraryModel.h  MediaTypes.h  MetadataService.cpp  MetadataService.h  PlaybackController.cpp  PlaybackController.h  RenameService.cpp  RenameService.h  ScanService.cpp  ScanService.h  SnapshotService.cpp  SnapshotService.h  ThumbnailService.cpp  ThumbnailService.h
src/ports/: IExternalToolResolver.h  IFileRenamer.h  IFileScanner.h  IMediaRepository.h  IMetadataProbe.h  IPathPolicy.h  IProcessRunner.h  ISettingsRepository.h  ISnapshotGenerator.h  IThumbnailGenerator.h
tests/: M03ScanRepositoryTest.cpp  M04LibraryQueryTest.cpp  M06MetadataDetailsTest.cpp  M07FileManagementTest.cpp  M08SnapshotThumbnailTest.cpp  M09QualityPerformanceTest.cpp  M10SettingsDiagnosticsTest.cpp  M11PerformanceSecurityRegressionTest.cpp  M12UtilityModularizationTest.cpp  M13ArchitectureBoundaryTest.cpp  M14UseCaseLibraryScanTest.cpp  M15UseCaseMediaActionsTest.cpp  M16InfrastructureAdapterTest.cpp  M17PresentationFacadeTest.cpp  M18SettingsDiagnosticsControllerTest.cpp  M19RepositoryPresentationMapperTest.cpp  M20ArchitectureBoundaryClosureTest.cpp  M21AppControllerFacadeClosureTest.cpp  M22SmartViewsFilterTest.cpp  M23MultiSelectionBatchTest.cpp  M24BatchRenameTest.cpp  M27KeyboardReviewModeTest.cpp  TestSupport.cpp  TestSupport.h
tools/perf_probe/: main.cpp
